<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Settings">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/login_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="649dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#D2DCC6"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Εικονίδιο στην αρχή (Αριστερά) -->
                    <ImageButton
                        android:id="@+id/OrderBag"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="Start Icon"
                        android:onClick="OrderBagfunction"
                        android:scaleType="fitCenter"
                        android:src="@drawable/shoppingbag"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Κεντρικός Τίτλος -->
                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Settings"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/OrderBag"
                        app:layout_constraintEnd_toStartOf="@id/iconEnd"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <!-- Εικονίδιο στο τέλος (Δεξιά) -->
                    <ImageButton
                        android:id="@+id/iconEnd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="18dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="End Icon"
                        android:onClick="ProfileFunction"
                        android:src="@drawable/baseline_face_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

            <!-- Στοιχεία χρήστη -->
            <TextView
                android:id="@+id/userInfoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Όνομα χρήστη"
                android:gravity="center"
                android:layout_marginTop="7dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp" />

            <TextView
                android:id="@+id/userInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email: user@email.com"
                android:gravity="center"
                android:layout_marginTop="7dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:padding="10dp"
                android:text="@string/location"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Κουμπιά αλλαγής χρώματος -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colourselect"
                android:textSize="15sp"
                android:paddingTop="20dp"
                android:layout_marginTop="7dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/colorRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🔴" />

                <Button
                    android:id="@+id/colorBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🔵" />

                <Button
                    android:id="@+id/colorGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🟢" />


            </LinearLayout>

            <!-- Αλλαγή μεγέθους γραμματοσειράς -->
            <TextView
                android:id="@+id/textSizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fontsize"
                android:textSize="15sp"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/sampleText"
                android:layout_width="298dp"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:text="@string/example"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseTextSize"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="➖" />


                <Button
                    android:id="@+id/increaseTextSize"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="➕" />
            </LinearLayout>

            <!-- Αλλαγή Γλώσσας -->
            <TextView
                android:id="@+id/textSizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lanquagechoose"
                android:textSize="15sp"
                android:paddingTop="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🇫🇷" />

                <Button
                    android:id="@+id/spanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🇪🇸" />

                <Button
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🇬🇧" />
            </LinearLayout>
            <Button
                android:id="@+id/GotoProducts"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:onClick="ProductsPage"
                android:text="@string/backProductpage"
                android:textAllCaps="false" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>