<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Orders_view">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/login_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="649dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#D2DCC6"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Εικονίδιο στην αρχή (Αριστερά) -->
                    <ImageButton
                        android:id="@+id/OrderBag"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="Start Icon"
                        android:onClick="OrderBagfunction"
                        android:scaleType="fitCenter"
                        android:src="@drawable/shoppingbag"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Κεντρικός Τίτλος -->
                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Orders"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/OrderBag"
                        app:layout_constraintEnd_toStartOf="@id/iconEnd"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <!-- Εικονίδιο στο τέλος (Δεξιά) -->
                    <ImageButton
                        android:id="@+id/iconEnd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="18dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="End Icon"
                        android:onClick="ProfileFunction"
                        android:src="@drawable/baseline_face_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/ordersContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </ScrollView>


            <Button
                android:id="@+id/OrderSend"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="OrderScreen"
                android:text="@string/backOrderpage"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/GotoProducts"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:onClick="ProductsPage"
                android:text="@string/backProductpage"
                android:textAllCaps="false" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>