<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SingleProduct">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/login_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="649dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#D2DCC6"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Εικονίδιο στην αρχή (Αριστερά) -->
                    <ImageButton
                        android:id="@+id/OrderBag"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="Start Icon"
                        android:onClick="OrderBagfunction"
                        android:scaleType="fitCenter"
                        android:src="@drawable/shoppingbag"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Κεντρικός Τίτλος -->
                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Product"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/OrderBag"
                        app:layout_constraintEnd_toStartOf="@id/iconEnd"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <!-- Εικονίδιο στο τέλος (Δεξιά) -->
                    <ImageButton
                        android:id="@+id/iconEnd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="18dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="End Icon"
                        android:onClick="ProfileFunction"
                        android:src="@drawable/baseline_face_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="1dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <!-- Product Info -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/productId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ID: "
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/productTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Title: "
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/productDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description: "
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/productPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price: "
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/productRelease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Release: "
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/Basketbutton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="addToCart"
                android:text="@string/addbasket"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/GotoProducts"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:onClick="ProductsPage"
                android:text="@string/lookProducts"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/Orderbutton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:onClick="OrderPage"
                android:text="@string/seeOrder"
                android:textAllCaps="false" />





        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>